fix: stretch flex

--- a/resources/assets/css/utils/blocks/content/_content-14.scss
+++ b/resources/assets/css/utils/blocks/content/_content-14.scss
@@ -4,14 +4,17 @@
       .c-title {
         text-align: center;
       }
+
       &__text {
         text-align: center;
         margin-top: rem(32);
       }
+
       &-layout {
-        @include flex(row, wrap, space-evenly, start);
+        @include flex(row, wrap, space-evenly, stretch);
         gap: rem(20);
         margin-top: rem(58);
+
         &-inner {
           @include flex(column, nowrap, start, center);
           gap: rem(32);
@@ -20,10 +23,12 @@
           background-color: color(grey-200);
           border-radius: rem(24);
           padding: rem(64) rem(32);
+
           .c-image {
             height: rem(100);
             width: rem(100);
           }
+
           &__text {
             min-height: rem(70);
             color: color(primary);
